fixed spacing issues and cleaned up css a bit.

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -57,9 +57,7 @@
 }
 
 #scrollToTop p {
-  font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  font-size: 0.8rem;
   padding: 0 0.5rem 0.5rem 0;
   color: var(--subtle-color);
   cursor: pointer;
@@ -205,8 +203,13 @@ strong {
   margin-bottom: 1rem;
 }
 
-.textBlock p:first-of-type {
+.textBlock p:first-of-type,
+h3:first-of-type {
   margin-top: 1rem;
+}
+
+.textBlock h4:first-of-type {
+  margin: 0.5rem 0 0.5rem 0;
 }
 
 .textBlock p:last-child {
