--- a/src/CSS/MainNav.css
+++ b/src/CSS/MainNav.css
@@ -37,10 +37,6 @@
 }
 
 .nav-link {
-  /* background: white; */
-  /* margin-bottom: 1rem; */
-  /* font-family: 'Roboto', sans-serif; */
-  font-weight: 700;
   color: var(--black);
 }
 
