--- a/src/CSS/reset.css
+++ b/src/CSS/reset.css
@@ -47,13 +47,13 @@ h4,
 h5,
 h6,
 p,
-li {
+li,
+a {
   font-family: 'Roboto Mono', monospace;
 }
 
 h1,
-h2,
-a {
+h2 {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
 }
@@ -72,12 +72,12 @@ h3 {
 }
 
 h4 {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 700;
 }
 
 h5 {
-  font-size: 0.9rem;
+  font-size: 0.75rem;
   font-style: italic;
   color: var(--subtle-color);
 }
@@ -87,7 +87,8 @@ h6 {
 }
 
 p,
-li {
+li,
+a {
   font-size: 0.9rem;
   /* text-align: justify; */
   /* line-height: 1px; */
@@ -97,6 +98,7 @@ a {
   text-decoration: none;
   color: var(--subtle-color);
   transition: 0.25s;
+  font-weight: 700;
   /* font-size: 0.75rem; */
 }
 
